[project]
name = "zoom-webhook-listener"
version = "0.1.0"
description = "A Flask webhook listener for Zoom events"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [

  "flask>=3.0.3",
  "requests>=2.32.4"
]

[[project.authors]]
name = "Susanne Schotanus"
email = "susanne@passionatewritercoaching.com"